# AugmentOS

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json
AugmentOS_Manager/: app.json  babel.config.js  package-lock.json  package.json  react-native.config.js
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/liblc3/: CMakeLists.txt  liblc3.cpp
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/liblc3/include/: lc3.h  lc3_private.h
SmartGlassesManager/SGM_android/SmartGlassesManager/src/main/cpp/liblc3/liblc3/: CMakeLists.txt  attdet.c  attdet.h  bits.c  bits.h  bwdet.c  bwdet.h  common.h  energy.c  energy.h  fastmath.h  lc3.c  ltpf.c  ltpf.h  ltpf_arm.h  ltpf_neon.h  makefile.mk  mdct.c  mdct.h  mdct_neon.h  meson.build  plc.c  plc.h  sns.c  sns.h  spec.c  spec.h  tables.c  tables.h  tns.c  tns.h
android_app/: build_log.txt  gradle.properties  settings.gradle
augmentos_G1_icons/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
augmentos_android_library/: settings.gradle
augmentos_asg_client/: .env.example  README.md  build.gradle  settings.gradle
augmentos_client/: .gitignore  example_usage.py  language_learning.py
augmentos_cloud/: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.base  Dockerfile.cloud  Dockerfile.dashboard-manager  Dockerfile.flash  Dockerfile.live-captions  Dockerfile.miraai  Dockerfile.notify  README.md  bun.lockb  cayden-ecosystem.config.js  dev-ecosystem.config.js  dev.sh  docker-compose-dev.yml  docker-compose.yml  prod.sh  (+10 more)
(+2012 files in other folders)
